--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,49 @@
 .page {
     display: flex;
     margin: 0;
+    font-family: 'Rubik', sans-serif;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
-    font-family: 'Rubik', sans-serif;
 }
 
 .header {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
     width: 100%;
+    margin: 0;
+    position: fixed;
+    height: 100px;
+    background: white;
 }
 
 .logo__box {
+    flex-grow: 2;
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .logo__image {
     width: 155px;
+    margin: 10px;
 }
 
 .menu {
     font-size: 16px;
     color: #4a4a4a;
+    margin: 0 0 13px;
+    list-style: none;
+    padding: 0;
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-around;
+    width: 155px;
+}
+
+.menu_item {
+    display: inline;
 }
 
 .content {
@@ -32,4 +52,7 @@
     font-size: 16px;
     color: #FFFFFF;
     height: 100vh;
+    width: 100%;
+    margin-top: 80px;
+    
 }
