--- a/styles/style.css
+++ b/styles/style.css
@@ -42,8 +42,14 @@
     width: 155px;
 }
 
+a {
+    text-decoration: none;
+    color: #4a4a4a;
+}
+
 .menu_item {
     display: inline;
+   
 }
 
 .content {
@@ -54,5 +60,21 @@
     height: 100vh;
     width: 100%;
     margin-top: 80px;
-    
+}
+
+@media all and (min-width: 768px) {
+    .header {
+        flex-wrap: nowrap;
+        justify-content: flex-end;
+    }
+    .logo__box {
+        justify-content: flex-start;
+    }
+    .menu {
+        font-size: 16px;
+    }
+
+    .content {
+        font-size: 40px;
+    }
 }
