--- a/styles/style.css
+++ b/styles/style.css
@@ -91,18 +91,19 @@
 @media all and (min-width: 768px) {
     .header {
         display: flex;
+        flex-direction: row;
         justify-content: space-between;
         padding: 20px 30px;
         box-sizing: border-box;
-        align-items: center;
     }
-    /* .logo__image {
+    .logo__image {
         display: inline;
+        padding: 0;
     }
 
     .logo__image__link {
         display: inline;
-    } */
+    }
     .menu {
         font-size: 16px;
     }
